--- a/icehockey_ServerV3/WebContent/views/imformation/coachinfo.html
+++ b/icehockey_ServerV3/WebContent/views/imformation/coachinfo.html
@@ -5,62 +5,74 @@
 <meta name="viewport"
 	content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>我的中心</title>
-<link rel="stylesheet" href="css/personinfo/coachinfo.css">
-<script type="text/javascript" src="js/jQuery/jquery-3.2.1.js"></script>
+<title>教练员信息</title>
+<link rel="stylesheet" href="../../css/personinfo/coachinfo.css">
+<script type="text/javascript" src="../../js/jQuery/jquery-3.2.1.js"></script>
 <script type="text/javascript">
 $(document).ready(function(){
 	var urlUserId=comm.getUrlParameter("userid");
 	  $(".button_gear").click(function(){
-	    window.location.href="Systemsetting.html?userid="+urlUserId;
+	    window.location.href="../views/imformation/Systemsetting.html?userid="+urlUserId;
 	  });
 	});
 $(document).ready(function(){
 	var urlUserId=comm.getUrlParameter("userid");
   $(".button_invite").click(function(){
-    window.location.href="invitefriend1.html?userid="+urlUserId;
+    window.location.href="../../views/coach/gethonor_coach.html?userid="+urlUserId;
+  });
+});
+$(document).ready(function(){
+	var urlUserId=comm.getUrlParameter("userid");
+  $(".button_follow").click(function(){
+    window.location.href="../../views/coach/follow_coach.html?userid="+urlUserId;
+  });
+});
+$(document).ready(function(){
+	var urlUserId=comm.getUrlParameter("userid");
+  $(".button_fans").click(function(){
+    window.location.href="../../views/coach/fans_coach.html?userid="+urlUserId;
   });
 });
 $(document).ready(function(){
 	var urlUserId=comm.getUrlParameter("userid");
 	  $(".button_next1").click(function(){
-	    window.location.href="mylevel.html?userid="+urlUserId;
+	    window.location.href="../../views/coach/mylevel.html?userid="+urlUserId;
 	  });
 	});
 $(document).ready(function(){
 	var urlUserId=comm.getUrlParameter("userid");
 	  $(".button_next2").click(function(){
-	    window.location.href="gethonor.html?userid="+urlUserId;
+	    window.location.href="../../views/coach/invite_coach.html?userid="+urlUserId;
 	  });
 	});
 $(document).ready(function(){
 	var urlUserId=comm.getUrlParameter("userid");
 	  $(".button_next3").click(function(){
-	    window.location.href="myteam.html?userid="+urlUserId;
+	    window.location.href="../../views/coach/myteam_coach.html?userid="+urlUserId;
 	  });
 	});
 $(document).ready(function(){
 	var urlUserId=comm.getUrlParameter("userid");
 	  $(".button_next4").click(function(){
-	    window.location.href="oftensite.html?userid="+urlUserId;
+	    window.location.href="../../views/coach/oftensite_coach.html?userid="+urlUserId;
 	  });
 	});
 $(document).ready(function(){
 	var urlUserId=comm.getUrlParameter("userid");
 	  $(".button_next5").click(function(){
-	    window.location.href="myequipment.html?userid="+urlUserId;
+	    window.location.href="../../views/coach/myequipment_coach.html?userid="+urlUserId;
 	  });
 	});
 $(document).ready(function(){
 	var urlUserId=comm.getUrlParameter("userid");
 	  $(".button_next6").click(function(){
-	    window.location.href="myactivity.html?userid="+urlUserId;
+	    window.location.href="../../views/coach/myactivity_coach.html?userid="+urlUserId;
 	  });
 	});
 $(document).ready(function(){
 	var urlUserId=comm.getUrlParameter("userid");
 	  $(".button_next7").click(function(){
-	    window.location.href="myphoto.html?userid="+urlUserId;
+	    window.location.href="../../views/coach/myphoto_coach.html?userid="+urlUserId;
 	  });
 	});
 </script>
@@ -76,30 +88,89 @@ $(document).ready(function(){
 <p>
 教练员、裁判员</p>
 </div>
-<input type="button" class="button_next1" value="">
-<input type="button" class="button_next2" value="">
-<input type="button" class="button_next3" value="">
-<input type="button" class="button_next4" value="">
-<input type="button" class="button_next5" value="">
-<input type="button" class="button_next6" value="">
-<input type="button" class="button_next7" value="">
+
+
+
+
+
+
+
 <ul class="list">
-	<li>我的级别---教练或裁判国家级别</li>
-	<li>获得殊荣</li>
-	<li>我的球队 ----俱乐部、校队</li>
-	<li>常去的场地</li>
-	<li>我的装备</li>
-	<li>我的活动</li>
-	<li>我的照片</li>
+	<li>
+		<div id="mylevel_coach">
+			我的级别---教练或裁判国家级别
+			<input type="button" class="button_next1" value="">
+		</div>
+		</li>
+	<li>
+		<div id="gethonor_coach">
+			获得殊荣
+			<input type="button" class="button_next2" value="">
+		</div>
+		</li>
+	<li>
+		<div id="myteam_coach">
+			我的球队 ----俱乐部、校队
+			<input type="button" class="button_next3" value="">
+		</div>
+		</li>
+	<li>
+		<div id="myplace_coach">
+			常去的场地
+			<input type="button" class="button_next4" value="">
+		</div>
+		</li>
+	<li>
+		<div id="myequipment_coach">
+			我的装备
+			<input type="button" class="button_next5" value="">
+		</div>
+		</li>
+	<li>
+		<div id="myactivity_coach">
+			我的活动
+			<input type="button" class="button_next6" value="">
+		</div>
+		</li>
+	<li>
+		<div id="myphoto_coach">
+			我的照片
+			<input type="button" class="button_next7" value="">
+		</div>
+		</li>
 	</ul>
-<div class="div2cs">
-<input type="button" class="button_schedule" value="赛事">
-<input type="button" class="button_tools" value="工具箱">
-<input type="button" class="button_community" value="社区">
-<input type="button" class="button_massage" value="消息">
-<input type="button" class="button_myself" value="我的">
-</div>
+<div class="main-bottom">
+
+			<div onclick="mainClick()">
+				<img src="../../images/login/user-photo.png" />
+				<span>主页面</span>
+			</div>
+			<div onclick="saichengClick()">
+				<img src="../../images/login/user-photo.png" />
+				<span>赛程</span>
+			</div>
+			<div onclick="gongjuClick()">
+				<img src="../../images/login/user-photo.png" />
+				<span>工具箱</span>
+			</div>
+			<div onclick="clubClick()">
+				<img src="../../images/login/user-photo.png" />
+				<span>社区</span>
+			</div>
+			<div onclick="infoClick()">
+				<img src="../../images/login/user-photo.png" />
+				<span>消息</span>
+			</div>
+			<div onclick="mineClick()">
+				<img src="../../images/login/user-photo.png" />
+				<span>我的</span>
+			</div>
+			</div>
 
 
 </body>
+<script src="../../js/urlApi/api.js"></script>
+<script src="../../js/common/common.js" type="text/javascript"></script>
+
+<script src="../../js/pageJS/coachinfo.js" type="text/javascript"></script>
 </html>
