--- a/icehockey_ServerV3/WebContent/css/personinfo/myphoto.css
+++ b/icehockey_ServerV3/WebContent/css/personinfo/myphoto.css
@@ -13,7 +13,7 @@ body{
 	background-color: transparent;
 	position:fixed;
 	border:none;
-	left:50px;
+	left:0px;
 	top:100px;
 }
 .button_exchange{
@@ -21,7 +21,7 @@ body{
 	background-color: transparent;
 	position:fixed;
 	border:none;
-	left:150px;
+	left:30%;
 	top:100px;
 }
 .button_collection{
@@ -29,7 +29,7 @@ body{
 	background-color: transparent;
 	position:fixed;
 	border:none;
-	left:250px;
+	left:60%;
 	top:100px;
 }
 
