--- a/icehockey_ServerV3/WebContent/views/imformation.html
+++ b/icehockey_ServerV3/WebContent/views/imformation.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>人员信息页面</title>
+    <title>守门员信息页面</title>
 	<link rel="stylesheet" href="../css/personinfo/imformation1.css">
 	<script type="text/javascript" src="../js/jQuery/jquery-3.2.1.js"></script>
 	<script type="text/javascript">
