--- a/icehockey_ServerV3/WebContent/views/imformation/fans.html
+++ b/icehockey_ServerV3/WebContent/views/imformation/fans.html
@@ -7,13 +7,13 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <title>我的中心</title>
 <link rel="stylesheet" href="../../css/personinfo/mylevel.css">
-<link rel="stylesheet" href="../../css/personinfo/fans.css">
+<!--<link rel="stylesheet" href="../../css/personinfo/fans.css">-->
 <script type="text/javascript" src="../../js/jQuery/jquery-3.2.1.js"></script>
 <script type="text/javascript">
 $(document).ready(function(){
 	var urlUserId=comm.getUrlParameter("userid");
 	  $(".button_back").click(function(){
-	    window.location.href="../views/imformation.html?userid="+urlUserId;
+	    window.location.href="../imformation.html?userid="+urlUserId;
 	  });
 });
 </script>
@@ -22,4 +22,6 @@ $(document).ready(function(){
 <h1 class="p1">我的粉丝 </h1>
 <input type="button" class="button_back" value="">
 </body>
+<script src="../../js/urlApi/api.js"></script>
+	<script src="../../js/common/common.js" type="text/javascript"></script>
 </html>
