--- a/icehockey_ServerV3/WebContent/views/imformation/follow.html
+++ b/icehockey_ServerV3/WebContent/views/imformation/follow.html
@@ -12,7 +12,7 @@
 $(document).ready(function(){
 	var urlUserId=comm.getUrlParameter("userid");
 	  $(".button_back").click(function(){
-	    window.location.href="../views/imformation.html?userid="+urlUserId;
+	    window.location.href="../imformation.html?userid="+urlUserId;
 	  });
 });
 </script>
@@ -21,4 +21,6 @@ $(document).ready(function(){
 <h1 class="p1">我的关注</h1>
 <input type="button" class="button_back" value="">
 </body>
+<script src="../../js/urlApi/api.js"></script>
+	<script src="../../js/common/common.js" type="text/javascript"></script>
 </html>
